// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ConnectedHeader renders the ConnectedHeader component 1`] = `
Object {
  "children": Array [
    <Button
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(SearchOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
    <Button
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(QuestionCircleOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
    <Button
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(BellOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
    <Button
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(BellOutlined) />}
      loading={false}
      type="primary"
    >
      <Link
        to="/login"
      >
        Login
      </Link>
    </Button>,
    <Button
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(GlobalOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
  ],
  "className": "txt-white align-items-center justify-content-end px-1 layout-header",
}
`;

exports[`components/ConnectedHeader renders the ConnectedHeader when logged in 1`] = `
Object {
  "children": Array [
    <Button
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(SearchOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
    <Button
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(QuestionCircleOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
    <Button
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(BellOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
    <Dropdown
      mouseEnterDelay={0.15}
      mouseLeaveDelay={0.1}
      overlay={
        <Menu>
          <MenuItem>
            <Link
              to="/logout"
            >
              Logout
            </Link>
          </MenuItem>
          <MenuItem>
            <Link
              to="/user/edit/cab07278-c77b-4bc7-b154-bcbf01b7d35b"
            >
              Manage account
            </Link>
          </MenuItem>
        </Menu>
      }
      placement="bottomRight"
    >
      <Button
        block={false}
        className="h-auto d-flex align-items-center bg-transparent border-0 rounded-0"
        ghost={false}
        htmlType="button"
        icon={
          <Avatar
            className="mr-1 bg-white"
            shape="circle"
            size="default"
          >
            RobertBaratheon
          </Avatar>
        }
        loading={false}
        shape="circle"
        type="primary"
      >
        RobertBaratheon
      </Button>
    </Dropdown>,
    <Button
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(GlobalOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
  ],
  "className": "txt-white align-items-center justify-content-end px-1 layout-header",
}
`;
